--- a/stylesheet.css
+++ b/stylesheet.css
@@ -52,3 +52,23 @@
       }
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+.hero {
+  background-color: lightgray;
+  border-radius: 30px;
+  margin: 10px;
+  padding: 10px;
+}
+
+.featured {
+  background-color: lightgray;
+  border-radius: 30px;
+  margin: 10px;
+  padding: 10px;
+}
