--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,6 +59,10 @@
   font-family: sans-serif;
 }
 
+body {
+  background-color: darkred;
+}
+
 .hero {
   background-color: lightgray;
   border-radius: 30px;
@@ -67,8 +71,64 @@
 }
 
 .featured {
-  background-color: lightgray;
+  background-color: #edd353;
   border-radius: 30px;
   margin: 10px;
   padding: 10px;
 }
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 10px;
+}
+
+.card {
+  width: 300px;
+  height: 400px;
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+  margin: 10px;
+
+  .img-container {
+    height: 50%;
+  
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .button {
+    .btn {
+      position: relative;
+      left: 15px;
+      padding: 8px 30px;
+      background-color: #333;
+      text-decoration: none;
+      border-radius: 4px;
+      margin-top: 16px;
+      color: #fff;
+    }
+  }
+
+  .card-content {
+    padding: 16px;
+    height: 40%;
+    h3 {
+      font-size: 20px;
+      margin-bottom: 8px;
+    }
+  
+    p {
+      color: #666;
+      font-size: 100%;
+      line-height: 1.3;
+    }
+  }
+}
+
+
