--- a/stylesheet.css
+++ b/stylesheet.css
@@ -64,17 +64,29 @@ body {
 }
 
 .hero {
-  background-color: lightgray;
-  border-radius: 30px;
-  margin: 10px;
-  padding: 10px;
+  color: white;
+  h1 {
+    font-size: 6vw;
+  }
+  p {
+    font-size: 1.5vw;
+  }
+  .text-container {
+    position: absolute;
+    top: 6vw;
+    left: 3vw;
+  }
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .featured {
   background-color: #edd353;
   border-radius: 30px;
   margin: 10px;
-  padding: 10px;
+  padding: 15px;
 }
 
 .card-container {
