--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,14 @@
 
-#navbar{
+.navbar{
+  height: 4vw;
+  font-size: 1.6vw;
+  background-color: #333;
     ul {
         list-style-type: none;
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-color: #333;
+
       }
       
       li {
@@ -16,7 +19,7 @@
         display: inline-block;
         color: white;
         text-align: center;
-        padding: 14px 16px;
+        padding: 1vw;
         text-decoration: none;
       }
       
@@ -32,14 +35,14 @@
         display: none;
         position: absolute;
         background-color: #f9f9f9;
-        min-width: 160px;
+        min-width: 9vw;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1;
       }
       
       .dropdown-content a {
         color: black;
-        padding: 12px 16px;
+        padding: 1vw;
         text-decoration: none;
         display: block;
         text-align: left;
@@ -83,27 +86,34 @@ body {
 }
 
 .featured {
+  height: 38vw;
   background-color: #edd353;
-  border-radius: 30px;
-  margin: 10px;
-  padding: 15px;
+  border-radius: 2vw;
+  margin: 1vw;
+  padding: 1vw;
+  h1 {
+    font-size: 2vw;
+  }
+  p {
+    font-size: 1.5vw;
+  }
 }
 
 .card-container {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 10px;
+  margin-top: 1vw;
 }
 
 .card {
-  width: 300px;
-  height: 400px;
+  width: 21.5vw;
+  height: 28vw;
   background-color: #f0f0f0;
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
-  margin: 10px;
+  margin: .7vw;
 
   .img-container {
     height: 50%;
@@ -116,29 +126,30 @@ body {
 
   .button {
     .btn {
+      font-size: 1vw;
       position: relative;
-      left: 15px;
-      padding: 8px 30px;
+      left: 1vw;
+      padding: .5vw 1vw;
       background-color: #333;
       text-decoration: none;
       border-radius: 4px;
-      margin-top: 16px;
+      margin-top: 1vw;
       color: #fff;
     }
   }
 
   .card-content {
-    padding: 16px;
-    height: 40%;
+    padding: 1vw;
+    height: 10vw;
     h3 {
-      font-size: 20px;
-      margin-bottom: 8px;
+      font-size: 1.4vw;
+      margin-bottom: 1vw;
     }
   
     p {
       color: #666;
-      font-size: 100%;
-      line-height: 1.3;
+      font-size: 1.2vw;
+      line-height: 1.3vw;
     }
   }
 }
