--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,58 +1,68 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Pattaya&display=swap');
+
 .navbar{
   height: 4vw;
   font-size: 1.6vw;
   background-color: #333;
-    ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
 
-      }
+  h1 {
+    font-family: 'Great Vibes';
+    color: white;
+    position: relative;
+    left: 61vw;
+    top:.5vw;
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
       
-      li {
-        float: left;
-      }
+  li {
+    float: left;
+  }
       
-      li a, .dropbtn {
-        display: inline-block;
-        color: white;
-        text-align: center;
-        padding: 1vw;
-        text-decoration: none;
-      }
+  li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 1vw;
+    text-decoration: none;
+  }
+
+  li a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+  }
       
-      li a:hover, .dropdown:hover .dropbtn {
-        background-color: red;
-      }
+  li.dropdown {
+    display: inline-block;
+  }
       
-      li.dropdown {
-        display: inline-block;
-      }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 9vw;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
       
-      .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f9f9f9;
-        min-width: 9vw;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 1;
-      }
+  .dropdown-content a {
+    color: black;
+    padding: 1vw;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
       
-      .dropdown-content a {
-        color: black;
-        padding: 1vw;
-        text-decoration: none;
-        display: block;
-        text-align: left;
-      }
+  .dropdown-content a:hover {background-color: #f1f1f1;}
       
-      .dropdown-content a:hover {background-color: #f1f1f1;}
-      
-      .dropdown:hover .dropdown-content {
-        display: block;
-      }
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
 }
 
 * {
@@ -70,6 +80,7 @@ body {
   color: white;
   h1 {
     font-size: 6vw;
+    font-family: 'Pattaya';
   }
   p {
     font-size: 1.5vw;
