--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
-
+/*Fonts section*/
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Pattaya&display=swap');
 
+/*Navigation bar section*/
 .navbar{
   height: 4vw;
   font-size: 1.6vw;
@@ -65,6 +66,7 @@
   }
 }
 
+/*Everything section*/
 * {
   margin: 0;
   padding: 0;
@@ -76,6 +78,7 @@ body {
   background-color: darkred;
 }
 
+/*Homepage section*/
 .hero {
   color: white;
   h1 {
@@ -111,6 +114,7 @@ body {
   }
 }
 
+/*Card section*/
 .card-container {
   display: flex;
   justify-content: center;
@@ -166,4 +170,108 @@ body {
   }
 }
 
+/*Recipe section*/
+.recipe-image {
+  border-radius: 2vw;
+  height: 35vw;
+  margin: 1vw;
+}
 
+.recipe-image img {
+  width: 100%;
+  border-radius: 2vw;
+  height: 100%;
+  object-fit: cover;
+}
+
+.recipe-title {
+  background-color: #edd353;
+  border-radius: 2vw;
+  margin: 1vw;
+  padding: 1vw;
+
+  h1 {
+    color: black;
+    font-family: 'Pattaya';
+    font-size: 3vw;
+  }
+}
+
+.ingredients {
+  background-color: #edd353;
+  border-radius: 2vw;
+  margin: 1vw;
+  padding: 1vw;
+  padding-left: 3vw;
+
+  h3 {
+    color: black;
+    font-family: 'Pattaya';
+    font-size: 3vw;
+  }
+
+  ul {
+    color: black;
+    font-family: sans-serif;
+    font-size: 2vw;
+  }
+}
+
+.instructions {
+  background-color: #edd353;
+  border-radius: 2vw;
+  margin: 1vw;
+  padding: 1vw;
+  padding-left: 4vw;
+
+  h3 {
+    color: black;
+    font-family: 'Pattaya';
+    font-size: 3vw;
+  }
+
+  ol {
+    color: black;
+    font-family: sans-serif;
+    font-size: 2vw;
+  }
+}
+
+.buttonBar {
+  background-color: #edd353;
+  border-radius: 2vw;
+  margin: 1vw;
+  padding: 1vw;
+  padding-left: 3vw;
+
+  button {
+    color: white;
+    background-color: #333;
+    border-color: black;
+    border-radius: 4px;
+    padding: .5vw 1vw;
+  }
+}
+
+#credits {
+  background-color: #edd353;
+  border-radius: 2vw;
+  margin: 1vw;
+  padding: 1vw;
+  padding-left: 3vw;
+
+  p {
+    color: black;
+    font-family: sans-serif;
+    font-size: 2vw;
+
+    a {
+      text-decoration:none;
+      border-style:solid;
+      border-color: #333;
+      background-color: #333;
+      color: white;
+      border-radius: .5vw;
+    }
+  }
+}
