--- a/stylesheet.css
+++ b/stylesheet.css
@@ -316,3 +316,47 @@ body {
     font-size: 2vw;
   }
 }
+
+.creators {
+  height: 40vw;
+  background-color: #edd353;
+  border-radius: 2vw;
+  margin: 1vw;
+  padding: 1vw;
+  padding-left: 3vw;
+  h1 {
+    font-family: 'Pattaya';
+    font-size: 3vw;
+  }
+  p {
+    font-size: 1.5vw;
+  }
+}
+
+.creators-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 1vw;
+
+  .card {
+    width: 24vw;
+    height: 31vw;
+    background-color: #f0f0f0;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+    margin-left: 3vw;
+    margin-right: 3vw;
+  
+    .img-container {
+      height: 18vw;
+    
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+  }
+}
