changed background color sections colored edd353 to fee0c4

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -101,7 +101,7 @@ body {
 
 .featured {
   height: 38vw;
-  background-color: #edd353;
+  background-color: #fee0c4;
   border-radius: 2vw;
   margin: 1vw;
   padding: 1vw;
@@ -185,7 +185,7 @@ body {
 }
 
 .recipe-title {
-  background-color: #edd353;
+  background-color: #fee0c4;
   border-radius: 2vw;
   margin: 1vw;
   padding: 1vw;
@@ -198,7 +198,7 @@ body {
 }
 
 .ingredients {
-  background-color: #edd353;
+  background-color: #fee0c4;
   border-radius: 2vw;
   margin: 1vw;
   padding: 1vw;
@@ -218,7 +218,7 @@ body {
 }
 
 .instructions {
-  background-color: #edd353;
+  background-color: #fee0c4;
   border-radius: 2vw;
   margin: 1vw;
   padding: 1vw;
@@ -238,7 +238,7 @@ body {
 }
 
 #buttonBar {
-  background-color: #edd353;
+  background-color: #fee0c4;
   border-radius: 2vw;
   margin: 1vw;
   padding: 1vw;
@@ -254,7 +254,7 @@ body {
 }
 
 #credits {
-  background-color: #edd353;
+  background-color: #fee0c4;
   border-radius: 2vw;
   margin: 1vw;
   padding: 1vw;
@@ -278,7 +278,7 @@ body {
 
 /*About Us section*/
 #aboutWebsite {
-  background-color: #edd353;
+  background-color: #fee0c4;
   border-radius: 2vw;
   margin: 1vw;
   padding: 1vw;
@@ -298,7 +298,7 @@ body {
 }
 
 #aboutUs {
-  background-color: #edd353;
+  background-color: #fee0c4;
   border-radius: 2vw;
   margin: 1vw;
   padding: 1vw;
@@ -319,7 +319,7 @@ body {
 
 .creators {
   height: 40vw;
-  background-color: #edd353;
+  background-color: #fee0c4;
   border-radius: 2vw;
   margin: 1vw;
   padding: 1vw;
@@ -364,7 +364,7 @@ body {
 /*Categories section*/
 .categories {
   height: 40vw;
-  background-color: #edd353;
+  background-color: #fee0c4;
   border-radius: 2vw;
   margin: 1vw;
   padding: 1vw;
