--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,7 @@
   }
 
   li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: darkred;
   }
       
   li.dropdown {
@@ -45,21 +45,21 @@
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #333;
     min-width: 9vw;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
       
   .dropdown-content a {
-    color: black;
+    color: white;
     padding: 1vw;
     text-decoration: none;
     display: block;
     text-align: left;
   }
       
-  .dropdown-content a:hover {background-color: #f1f1f1;}
+  .dropdown-content a:hover {background-color: #darkred;}
       
   .dropdown:hover .dropdown-content {
     display: block;
